debug + signin working

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
     build: express-server # specify the directory of the Dockerfile
     ports:
       - "9000:9000" #specify ports forewarding
+      - "9229:9229" #debug ports
     volumes:
       - ./express-server:/usr/src/app
       - /usr/src/app/node_modules
