--- a/angular-client/package.json
+++ b/angular-client/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve -H 0.0.0.0",
+    "start": "ng serve -H 0.0.0.0 --env=vm",
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
@@ -13,7 +13,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^5.0.0",
-    "@angular/common": "^5.0.0",
+    "@angular/common": "^5.1.3",
     "@angular/compiler": "^5.0.0",
     "@angular/core": "^5.0.0",
     "@angular/forms": "^5.0.0",
@@ -21,7 +21,11 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "angular2-materialize": "^15.1.10",
     "core-js": "^2.4.1",
+    "hammerjs": "^2.0.8",
+    "jquery": "^2.2.4",
+    "materialize-css": "^0.100.2",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
