--- a/angular-client/package.json
+++ b/angular-client/package.json
@@ -10,6 +10,10 @@
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
+  "engines": {
+    "node": "9.4.0",
+    "npm": "5.6.0"
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "^5.0.0",
